tanks now explode when they die

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
         </span>
       </div>
     </div>
-    <script src='/javascripts/socketio.js' type="text/javascript"></script>
+    <script src='/javascripts/socketio.js'                    type="text/javascript"></script>
     <script src='/javascripts/engine/engine.js'               type="text/javascript"></script>
     <script src='/javascripts/engine/audio_manager.js'        type="text/javascript"></script>
     <script src='/javascripts/engine/map.js'                  type="text/javascript"></script>
@@ -24,6 +24,7 @@
     <script src='/javascripts/engine/tile.js'                 type="text/javascript"></script>
     <script src='/javascripts/engine/screen.js'               type="text/javascript"></script>
     <script src='/javascripts/engine/camera.js'               type="text/javascript"></script>
+    <script src='/javascripts/engine/explosion.js'            type="text/javascript"></script>
     <script>
       var engine = new Grouter("canvas", '/maps/map0.json');
     </script>
